updated information pages

--- a/Ingredient Scanner/src/main/assets/html/about.html
+++ b/Ingredient Scanner/src/main/assets/html/about.html
@@ -1,29 +1,25 @@
 <html>
 <head>
-<title>About OCR Test</title>
+<title>About Ingredient Scanner</title>
 <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
 <p style="text-align:center"><img src="../images/launcher_icon.png" alt="OCR Test icon"></p>
-<p style="text-align:center">OCR Test<br>Version 0.5.14<br>Application by Robert Theis</p>
-<p style="text-align:center"><a href="http://www.twitter.com/rmtheis">@rmtheis</a><p>
-<p style="text-align:center"><a href="http://www.rmtheis.com">www.rmtheis.com</a><p>
+<p style="text-align:center">Ingredient Scanner<br>Version 1.0<br>Application by Tyler Ford, Rob Samalonis, and Vladamir Carrero.</p>
+<p style="text-align:center"><a href="https://github.com/tuf07378/ingredscan">GitHub Project Page</a><p>
 <hr />
 <p style="text-align:center"><a href="changes.html">Change log</a></p>
-<p style="text-align:center"><a href="mailto:robert.m.theis@gmail.com?subject=Feedback for OCR Test 0.5.14">Send feedback</a></p>
+<p style="text-align:center"><a href="mailto:tuf07378@gmail.com?subject=Feedback for Ingredient Scanner">Send feedback</a></p>
 <p style="text-align:center"><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">License</a></p>
 
 <hr />
-<p>This app is a mash-up of several open source projects: 
+<p>This app is a mash-up of several open source projects: </p>
 <ul>
   <li><a href="https://code.google.com/p/tesseract-ocr/">Tesseract OCR</a></li>
   <li><a href="https://code.google.com/p/tesseract-android-tools/">Tesseract Tools for Android</a></li>
   <li><a href="https://github.com/zxing/zxing/">ZXing</a></li>
-  <li>a San Francisco State University grad school project</li>
+  <li>a Temple University undergrad school project</li>
 </ul>
-</p>
-<p>The source code for this app is available at <a href="https://github.com/rmtheis/android-ocr">https://github.com/rmtheis/android-ocr</a>.</p>
-<hr />
-<p style="text-align:center"><a href="market://details?id=com.rmtheis.translator">Translator app</a></p>
+<p>The source code for this app is available at <a href="https://github.com/tuf07378/ingredscan">https://github.com/tuf07378/ingredscan</a>.</p>
 </body>
 </html>
