--- a/Ingredient Scanner/src/main/assets/html/about.html
+++ b/Ingredient Scanner/src/main/assets/html/about.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>About Ingredient Scanner</title>
+<title>About Aia - Am I Allergic?</title>
 <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
 <p style="text-align:center"><img src="../images/launcher_icon.png" alt="OCR Test icon"></p>
-<p style="text-align:center">Ingredient Scanner<br>Version 1.0<br>Application by Tyler Ford, Rob Samalonis, and Vladamir Carrero.</p>
+<p style="text-align:center">Am I Allergic?<br>Version 1.0<br>Application by Tyler Ford, Rob Samalonis, and Vladamir Carrero.</p>
 <p style="text-align:center"><a href="https://github.com/tuf07378/ingredscan">GitHub Project Page</a><p>
 <hr />
 <p style="text-align:center"><a href="changes.html">Change log</a></p>
